jvimalprasathdev/src/objects/RRB_Queue_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Current_queue_proficiency_level__c</fullName>
        <label>Current queue proficiency level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_assigned_user__c</fullName>
        <label>Next assigned user</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_robin_status__c</fullName>
        <label>Round Robin status</label>
        <picklist>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_robin_time__c</fullName>
        <inlineHelpText>Time in Mins</inlineHelpText>
        <label>Round Robin Wait time</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RRB Queue Matrix</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RRB Queue Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Round_Robin_Status_Is_Waiting</fullName>
        <active>true</active>
        <errorConditionFormula>And(ISPICKVAL(Round_robin_status__c, &apos;W&apos;),
ISBLANK(Round_robin_time__c)
)</errorConditionFormula>
        <errorDisplayField>Round_robin_time__c</errorDisplayField>
        <errorMessage>Please Enter Wait Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>round_robin_status_is_Not_W</fullName>
        <active>true</active>
        <description>Round robin time –  validation rules to say you enter number here only if round robin status is ‘W”</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Round_robin_status__c, &apos;W&apos;)),
NOT(ISBLANK( Round_robin_time__c))
)</errorConditionFormula>
        <errorDisplayField>Round_robin_time__c</errorDisplayField>
        <errorMessage>You can enter number here only if Round robin status is ‘W”</errorMessage>
    </validationRules>
</CustomObject>